kubernetes/pointsales-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pointsales-admin
  namespace: pointsales
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pointsales-admin
  template:
    metadata:
      labels:
        app: pointsales-admin
    spec:
      containers:
      - name: pointsales-admin
        image: tailorw/pointsales-admin:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pointsales-admin
  labels:
    app: pointsales-admin
  namespace: pointsales
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: pointsales-admin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pointsales-admin-ingress
  namespace: pointsales
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: pointsales-admin
      port:
        number: 3000
  ingressClassName: nginx
  rules:
  - host: "pointsalesdev.tailorw.net"
    http:
      paths:
      - pathType: Prefix
        path: "/auth/login"
        backend:
          service:
            name: pointsales-admin
            port:
              number: 3000
